--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>リンク集</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            background-color: #fff;
+            margin: 10px 0;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s;
+        }
+        li:hover {
+            transform: translateY(-5px);
+        }
+        a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <h1>リンク集</h1>
+    <ul>
+        <li><a href="https://aby3-seira.github.io/test/kameda.html" target="_blank">亀田自己紹介</a></li>
+        <li><a href="https://another-example.com" target="_blank">Another サイト</a></li>
+        <li><a href="https://yetanother-example.com" target="_blank">Yet Another サイト</a></li>
+    </ul>
+</body>
+</html>
