--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
             font-family: Arial, sans-serif;
             background-color: #f5f5f5;
             margin: 0;
-            padding: 20px;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            padding: 10px;
+            color: #fff;
+            text-align: center;
+        }
+        header ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        header li {
+            margin: 0 15px;
+        }
+        header a {
+            text-decoration: none;
+            color: #fff;
+            font-weight: bold;
         }
         h1 {
             text-align: center;
             color: #333;
+            margin: 20px 0;
         }
         ul {
             list-style-type: none;
@@ -21,7 +43,7 @@
         }
         li {
             background-color: #fff;
-            margin: 10px 0;
+            margin: 10px 20px;
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -38,9 +60,16 @@
     </style>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="https://example.com" target="_blank">Example サイト</a></li>
+            <li><a href="https://another-example.com" target="_blank">Another サイト</a></li>
+            <li><a href="https://yetanother-example.com" target="_blank">Yet Another サイト</a></li>
+        </ul>
+    </header>
     <h1>リンク集</h1>
     <ul>
-        <li><a href="https://aby3-seira.github.io/test/kameda.html" target="_blank">亀田自己紹介</a></li>
+        <li><a href="https://example.com" target="_blank">Example サイト</a></li>
         <li><a href="https://another-example.com" target="_blank">Another サイト</a></li>
         <li><a href="https://yetanother-example.com" target="_blank">Yet Another サイト</a></li>
     </ul>
