--- a/kameda.html
+++ b/kameda.html
@@ -48,7 +48,7 @@
     <header>
         <h1>亀田の自己紹介ブログ</h1>
         <ul>
-            <li><a href="https://example.com" target="_blank">Example サイト</a></li>
+            <li><a href="https://aby3-seira.github.io/test/kameda.html" target="_blank">亀田自己紹介</a></li>
             <li><a href="https://another-example.com" target="_blank">Another サイト</a></li>
             <li><a href="https://yetanother-example.com" target="_blank">Yet Another サイト</a></li>
         </ul>
