--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <header>
         <ul>
-            <li><a href=https://aby3-seira.github.io/test/kameda.html" target="_blank">亀田自己紹介</a></li>
+            <li><a href="https://aby3-seira.github.io/test/kameda.html" target="_blank">亀田自己紹介</a></li>
             <li><a href="https://another-example.com" target="_blank">Another サイト</a></li>
             <li><a href="https://yetanother-example.com" target="_blank">Yet Another サイト</a></li>
         </ul>
