--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         header a {
             text-decoration: none;
-            color: #fff;
+            color: #000;
             font-weight: bold;
         }
         h1 {
